--- a/style.css
+++ b/style.css
@@ -40,9 +40,9 @@ body{
     width:100%;
     height:2.3rem;
     color:white;
-    padding-left:20px;
+    padding-left:17px;
     padding-right:10px;
-    
+    cursor:pointer;
 }
 
 .container .accordion.active .label.selected{
@@ -99,7 +99,7 @@ body{
     background:white;
     color: #5B5B5B;
     padding:14px;
-    padding-left:20px;
+    padding-left:18px;
     margin-bottom:0px;
     transition:0.1s;
 }
